@@ -1,9 +1,5 @@
 package com.kyvislabs.ntfy.gateway.profile;
 
-import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.base.Predicate;
 import com.google.common.collect.Collections2;
 import com.google.common.collect.Lists;
@@ -12,10 +8,15 @@ import com.inductiveautomation.ignition.alarming.common.notification.Notificatio
 import com.inductiveautomation.ignition.alarming.notification.AlarmNotificationProfile;
 import com.inductiveautomation.ignition.alarming.notification.AlarmNotificationProfileRecord;
 import com.inductiveautomation.ignition.alarming.notification.NotificationContext;
+import com.inductiveautomation.ignition.common.QualifiedPath;
 import com.inductiveautomation.ignition.common.TypeUtilities;
 import com.inductiveautomation.ignition.common.WellKnownPathTypes;
 import com.inductiveautomation.ignition.common.alarming.AlarmEvent;
+import com.inductiveautomation.ignition.common.alarming.EventData;
+import com.inductiveautomation.ignition.common.alarming.config.CommonAlarmProperties;
 import com.inductiveautomation.ignition.common.config.FallbackPropertyResolver;
+import com.inductiveautomation.ignition.common.config.PropertySet;
+import com.inductiveautomation.ignition.common.config.PropertySetBuilder;
 import com.inductiveautomation.ignition.common.expressions.parsing.Parser;
 import com.inductiveautomation.ignition.common.expressions.parsing.StringParser;
 import com.inductiveautomation.ignition.common.model.ApplicationScope;
@@ -23,6 +24,7 @@ import com.inductiveautomation.ignition.common.model.values.QualifiedValue;
 import com.inductiveautomation.ignition.common.sqltags.model.types.DataQuality;
 import com.inductiveautomation.ignition.common.user.ContactInfo;
 import com.inductiveautomation.ignition.common.user.ContactType;
+import com.inductiveautomation.ignition.common.user.User;
 import com.inductiveautomation.ignition.gateway.audit.AuditProfile;
 import com.inductiveautomation.ignition.gateway.audit.AuditRecord;
 import com.inductiveautomation.ignition.gateway.audit.AuditRecordBuilder;
@@ -33,39 +35,81 @@ import com.inductiveautomation.ignition.gateway.model.GatewayContext;
 import com.inductiveautomation.ignition.gateway.model.ProfileStatus;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.log4j.Logger;
-
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.net.http.WebSocket;
+import java.net.http.HttpClient.Redirect;
+import java.net.http.HttpClient.Version;
+import java.net.http.WebSocket.Listener;
+import java.security.InvalidAlgorithmParameterException;
+import java.security.InvalidKeyException;
+import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionStage;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
+
+import javax.crypto.BadPaddingException;
+import javax.crypto.Cipher;
+import javax.crypto.IllegalBlockSizeException;
+import javax.crypto.KeyGenerator;
+import javax.crypto.NoSuchPaddingException;
+import javax.crypto.SecretKey;
+import javax.crypto.spec.GCMParameterSpec;
+import java.util.Base64;
+
+import com.fasterxml.jackson.annotation.JsonAutoDetect;
+import com.fasterxml.jackson.annotation.JsonAutoDetect.Visibility;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 
 public class NtfyNotificationProfile implements AlarmNotificationProfile {
 
     private final GatewayContext context;
-    private String auditProfileName, profileName, serverUrl;
+    private String auditProfileName, profileName, serverUrl, ackTopic, username, password;
     private final ScheduledExecutorService executor;
     private volatile ProfileStatus profileStatus = ProfileStatus.UNKNOWN;
     private Logger logger;
+    CompletableFuture ws;
+    ObjectMapper mapper = new ObjectMapper();
+    KeyGenerator keyGenerator;
+    private SecretKey key;
+    private Cipher encryptionCipher;
 
     public NtfyNotificationProfile(final GatewayContext context,
-                                     final AlarmNotificationProfileRecord profileRecord,
-                                     final NtfyNotificationProfileSettings settingsRecord) {
+            final AlarmNotificationProfileRecord profileRecord,
+            final NtfyNotificationProfileSettings settingsRecord) {
         this.context = context;
         this.executor = Executors.newSingleThreadScheduledExecutor();
         this.profileName = profileRecord.getName();
         this.serverUrl = settingsRecord.getServerUrl();
-
+        this.ackTopic = settingsRecord.getAckTopic();
+        this.username = settingsRecord.getUsername();
+        this.password = settingsRecord.getPassword();
         this.logger = Logger.getLogger(String.format("Ntfy.%s.Profile", this.profileName));
 
         try (PersistenceSession session = context.getPersistenceInterface().getSession(settingsRecord.getDataSet())) {
             auditProfileName = settingsRecord.getAuditProfileName();
         } catch (Exception e) {
             logger.error("Error retrieving notification profile details.", e);
+        }
+
+        try {
+            keyGenerator = KeyGenerator.getInstance("AES");
+            keyGenerator.init(256);
+            key = keyGenerator.generateKey();
+        } catch (NoSuchAlgorithmException e) {
+            logger.error("Error creating key generator.", e);
         }
 
     }
@@ -87,8 +131,7 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
                 NtfyProperties.ACTIONS,
                 NtfyProperties.ATTACH,
                 NtfyProperties.ICON,
-                NtfyProperties.TEST_MODE
-        );
+                NtfyProperties.TEST_MODE);
     }
 
     @Override
@@ -104,11 +147,18 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
     @Override
     public void onShutdown() {
         executor.shutdown();
+        try {
+            ((WebSocket) ws.get()).sendClose(WebSocket.NORMAL_CLOSURE, "");
+        } catch (InterruptedException | ExecutionException e) {
+            logger.debug("Socket already closed",e);
+        }
     }
 
     @Override
     public void onStartup() {
         profileStatus = ProfileStatus.RUNNING;
+        createAckListener();
+ 
     }
 
     @Override
@@ -127,6 +177,8 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
             String actions = evaluateStringExpression(notificationContext,NtfyProperties.ACTIONS);
             String icon = evaluateStringExpression(notificationContext,NtfyProperties.ICON);
             boolean testMode = notificationContext.getOrDefault(NtfyProperties.TEST_MODE);
+
+            actions = generateActionsString(notificationContext, actions);
 
             boolean success = true;
             if (testMode) {
@@ -160,32 +212,42 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
                             .header("Content-Type", "application/json")
                             .timeout(Duration.ofSeconds(10))
                             .POST(HttpRequest.BodyPublishers.ofString(message));
-                    
-                    if (!title.isBlank()) {
+
+                    if (!StringUtils.isBlank(username) && !StringUtils.isBlank(password)){
+                        String valueToEncode = username + ":" + password;
+                        builder.header("Authentication", "Basic " + Base64.getEncoder().encodeToString(valueToEncode.getBytes()));
+                    }
+
+                    if (!StringUtils.isBlank(title)) {
                         builder.header("Title", title);
                     }
 
-                    if (!tags.isBlank()) {
+                    if (!StringUtils.isBlank(tags)) {
                         builder.header("Tags", tags);
                     }
 
-                    if (!priority.isBlank()) {
+                    if (!StringUtils.isBlank(priority)) {
                         builder.header("Priority", priority);
                     }
 
-                    if (!clickAction.isBlank()) {
+                    if (!StringUtils.isBlank(clickAction)) {
                         builder.header("Click", clickAction);
                     }
 
-                    if (!attach.isBlank()) {
+                    if (!StringUtils.isBlank(attach)) {
                         builder.header("Attach", attach);
                     }
 
-                    if (!actions.isBlank()) {
+                    if (!StringUtils.isBlank(actions)) {
+                        String[] parts = StringUtils.split(actions,";");
+                        if (parts.length > 3){
+                            parts = Arrays.copyOfRange(parts,0,3);
+                            actions = StringUtils.join(parts, ";");
+                        }
                         builder.header("Action", actions);
                     }
 
-                    if (!icon.isBlank()) {
+                    if (!StringUtils.isBlank(icon)) {
                         builder.header("Icon", icon);
                     }
 
@@ -215,7 +277,7 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
     }
 
     private void audit(boolean success, String eventDesc, NotificationContext notificationContext) {
-        logger.debug(String.format("auditing to %s",auditProfileName));
+        logger.debug(String.format("auditing to %s", auditProfileName));
         if (!StringUtils.isBlank(auditProfileName)) {
             try {
                 AuditProfile p = context.getAuditManager().getProfile(auditProfileName);
@@ -245,15 +307,15 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
         }
     }
 
-    private String evaluateStringExpression(NotificationContext notificationContext, BasicNotificationProfileProperty property) {
+    private String evaluateStringExpression(NotificationContext notificationContext,
+            BasicNotificationProfileProperty property) {
         Parser parser = new StringParser();
 
-        FallbackPropertyResolver resolver =
-                new FallbackPropertyResolver(context.getAlarmManager().getPropertyResolver());
+        FallbackPropertyResolver resolver = new FallbackPropertyResolver(
+                context.getAlarmManager().getPropertyResolver());
 
-        FormattedExpressionParseContext parseContext =
-                new FormattedExpressionParseContext(
-                        new AlarmEventCollectionExpressionParseContext(resolver, notificationContext.getAlarmEvents()));
+        FormattedExpressionParseContext parseContext = new FormattedExpressionParseContext(
+                new AlarmEventCollectionExpressionParseContext(resolver, notificationContext.getAlarmEvents()));
 
         String expressionString = null;
 
@@ -262,9 +324,8 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
             boolean isThrottled = notificationContext.getAlarmEvents().size() > 1;
 
             if (isThrottled || StringUtils.isBlank(customMessage)) {
-                expressionString = isThrottled ?
-                        notificationContext.getOrDefault(NtfyProperties.THROTTLED_MESSAGE) :
-                        notificationContext.getOrDefault(NtfyProperties.MESSAGE);
+                expressionString = isThrottled ? notificationContext.getOrDefault(NtfyProperties.THROTTLED_MESSAGE)
+                        : notificationContext.getOrDefault(NtfyProperties.MESSAGE);
             } else {
                 expressionString = customMessage;
             }
@@ -313,12 +374,148 @@ public class NtfyNotificationProfile implements AlarmNotificationProfile {
     }
 
     /**
-     * A {@link Predicate} that returns true if a {@link ContactInfo}'s {@link ContactType} is Console.
+     * A {@link Predicate} that returns true if a {@link ContactInfo}'s
+     * {@link ContactType} is Console.
      */
     private static class IsNtfyContactInfo implements Predicate<ContactInfo> {
         @Override
         public boolean apply(ContactInfo contactInfo) {
             return NtfyNotificationProfileType.NTFY.getContactType().equals(contactInfo.getContactType());
         }
+    }
+
+    private String generateActionsString(NotificationContext notificationContext, String actions){
+        if (!StringUtils.isBlank(ackTopic)){
+            try {
+                String s = String.format("%s~%s",notificationContext.getAlarmEvents().get(0).getId().toString(),notificationContext.getUser().get(User.Username));
+                String encrypted = encrypt(s);
+                String ackAction = String.format("http, Ack Alarm, %s/%s, body=%s, method=POST, clear=true, headers.Cache=no ", serverUrl, ackTopic, encrypted);
+                actions = String.format("%s; %s",ackAction,actions);
+                if (logger.isDebugEnabled()){
+                    logger.debug(String.format("Actions - %s",actions));
+                }
+            }  catch (Exception ex) {
+                logger.error("Error",ex);
+            }
+        }
+        return actions;
+    }
+
+    private void createAckListener() {
+        try {
+            URL ntfyUrl = new URL(serverUrl);
+        
+            String protocol = "https".equals(ntfyUrl.getProtocol())?"wss":"ws";
+            String ackUrl = String.format("%s://%s/%s/ws",protocol,ntfyUrl.getHost(),ackTopic);
+            try {
+                HttpClient client = HttpClient.newBuilder()
+                .version(Version.HTTP_2)
+                .followRedirects(Redirect.NORMAL)
+                .connectTimeout(Duration.ofSeconds(20))
+                .build();
+
+                
+                ws = client.newWebSocketBuilder().connectTimeout(Duration.ofSeconds(10))
+                    .buildAsync(new URI(ackUrl), new Listener() {
+                        StringBuilder text = new StringBuilder();
+                        CompletableFuture<?> accumulatedMessage = new CompletableFuture<>();
+                        
+                        @Override
+                        public void onOpen(WebSocket webSocket) {
+                            Listener.super.onOpen(webSocket);
+                            logger.debug("Websocket open");
+                        }
+
+                        @Override
+                        public CompletionStage<?> onText(WebSocket webSocket, CharSequence data, boolean last) {
+                            text.append(data);
+                            webSocket.request(1);
+                            
+                            accumulatedMessage.complete(null);
+                            CompletionStage<?> cf = accumulatedMessage;
+                            accumulatedMessage = new CompletableFuture<>();
+
+                            if (last) {
+                                final var json = text.toString();
+                                text = new StringBuilder();
+                                try {
+                                    Message msg = mapper.readValue(json, Message.class);
+                                    if ("message".equals(msg.event)) {
+                                        String unencrypted = decrypt(msg.message);
+                                        AckMessage ack = AckMessage.fromNtfyMessage(unencrypted);
+                                        List<UUID> uuidToAck = new ArrayList<>();
+                                        uuidToAck.add(UUID.fromString(ack.event));
+
+                                        final var ackUser = new QualifiedPath.Builder().setProvider("default").setUser(ack.user).build();
+                                        PropertySet eventData = new PropertySetBuilder().set(CommonAlarmProperties.AckUser, ackUser).build();
+                                        context.getAlarmManager().acknowledgeBulk(uuidToAck,new EventData(eventData));
+                                    }
+
+                                } catch (JsonProcessingException e) {
+                                    logger.error("Message not valid",e);
+                                } catch (Exception e){
+                                    logger.error("Something is wrong",e);
+                                }
+
+                                return cf;
+                            }
+                            return cf;                    }
+                        @Override
+                        public CompletionStage<?> onClose(WebSocket webSocket, int statusCode, String reason) {
+                            webSocket.sendClose(WebSocket.NORMAL_CLOSURE, "");
+                            return Listener.super.onClose(webSocket, statusCode, reason);
+                        }
+                    });
+    
+            } catch (URISyntaxException e) {
+                logger.error("Error doing stuff",e);
+            }
+        } catch (MalformedURLException e1) {
+            logger.error("Issue starting web socket",e1);
+        }
+    }
+
+    public String encrypt(String data) throws InvalidKeyException, NoSuchAlgorithmException, NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException {
+        byte[] dataInBytes = data.getBytes();
+        encryptionCipher = Cipher.getInstance("AES/GCM/NoPadding");
+        encryptionCipher.init(Cipher.ENCRYPT_MODE, key);
+        byte[] encryptedBytes = encryptionCipher.doFinal(dataInBytes);
+        return Base64.getEncoder().encodeToString(encryptedBytes);
+    }
+
+    private String decrypt(String encryptedData) throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException, InvalidAlgorithmParameterException, IllegalBlockSizeException, BadPaddingException{
+        byte[] dataInBytes = Base64.getDecoder().decode(encryptedData);
+        Cipher decryptionCipher = Cipher.getInstance("AES/GCM/NoPadding");
+        GCMParameterSpec spec = new GCMParameterSpec(128, encryptionCipher.getIV());
+        decryptionCipher.init(Cipher.DECRYPT_MODE, key, spec);
+        byte[] decryptedBytes = decryptionCipher.doFinal(dataInBytes);
+        return new String(decryptedBytes);
+    }
+    @JsonAutoDetect(fieldVisibility = Visibility.ANY)
+    private static class Message {
+        String id;
+        Long time;
+        String event;
+        String topic;
+        String title;
+        String message;
+
+        public Message(){
+        }
+    }
+
+    @JsonAutoDetect(fieldVisibility = Visibility.ANY)
+    private static class AckMessage {
+        String event, user;
+        public static AckMessage fromNtfyMessage(String msg){
+            final String[] parts = msg.split("~");
+            return new AckMessage(parts[0],parts[1]);
+
+        }
+        public AckMessage(String event,String user){
+            this.event = event;
+            this.user = user;
+        }
+
     }
 }
